# nadoview_qt

./: CMakeLists.txt  Info.plist  books.qml  customurlschemehandler.cpp  customurlschemehandler.h  icon.icns  index.html  macos.mm  main.cpp  main.qml  mainwin.qml  myapplication.cpp  myapplication.h  myappsingle.cpp  myappsingle.h  mybookimageschemehandler.cpp  mybookimageschemehandler.h  mybookurlschemehandler.cpp  mybookurlschemehandler.h  nawebview.cpp  nawebview.h  networkmanager.cpp  networkmanager.h  openchatmodel.cpp  openchatmodel.h  painterimage.cpp  painterimage.h  res.qrc  settings.qml  tableofcontent.cpp  tableofcontent.h  transfer.cpp  transfer.h  transferworker.cpp  transferworker.h  userdata.cpp  userdata.h  userdatabookworks.cpp  userdatabookworks.h
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/: MyQtActivity.java
ebooklib/: epubbook.cpp  epubbook.h  ibook.cpp  ibook.h
quazip/: CMakeLists.txt
res/: book.js  index.html
